# Competeasy

./: .gitignore  C4.drawio  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: backend.rs  main.rs  parse.rs  scrap.rs
backend/src/ffvb_scraper/: entity.rs  mod.rs
backend/src/scrap/: constant.rs  entity.rs
backend/src/utils/: constant.rs  entity.rs  mod.rs  query.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css  constant.js  main.js  requests.js
frontend/src/components/: Competition.svelte  Department.svelte  Match.svelte  Region.svelte  SimpleButton.svelte
src/: backend.rs  main.py  main.rs
