[package]
name = "compet_easy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
reqwest = {version = "0.11", features = ["blocking", "rustls-tls-webpki-roots"]}
scraper = "0.13.0"
actix-web = "4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
